# zenos-memory

./: .env.example  .gitignore  .vercelignore  CREDENTIALS.md  OPERATIONS.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  test-memory.ts  tsconfig.json  vercel.json  zenos-memory-roadmap.md
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
deploy/: install-local-service.sh  zenos-memory.service
docs/: HERMES_PLUGIN.md  SDK.md
scripts/: check-auth-scopes.mjs  deploy-vercel.sh  get-google-oauth-token.mjs  inspect-drive-layout.mjs  install-hermes-plugin.sh  load-env-and-start.mjs  migrate-drive-events.mts  migrate-encrypted-local-backup-to-cloud.mjs  migrate-legacy-vercel.mts  prepare-service-environment.mjs  prepare-standalone.mjs  prewarm-readiness.mjs  rotate-memory-signing-key.py  run-maintenance.mjs  runtime-env.mjs  smoke-cloud-concurrency.mts  smoke-cloud-drive.mts  smoke-production.mjs  smoke-semantic-production.mjs  upload-offsite-backups.mjs  zenos-memory-cli.mjs
sdk/python/: pyproject.toml  zenos_memory_client.py
tests/: api-surface-contract.test.ts  cloud-engine-consistency.test.ts  cloud-events.test.ts  cognitive-brief.test.ts  compaction.test.ts  deployment.test.ts  drive-adapter.test.ts  event-packs.test.ts  hermes_plugin_test.py  intelligence-eval.test.ts  knowledge-ingestion.test.ts  memory-engine.test.ts  memory-llm.test.ts  resource-policy.test.ts  route-contracts.test.ts  sdk-auth.test.ts  security.test.ts  semantic-retrieval.test.ts  service-environment.test.ts
types/: node-sqlite.d.ts
(+87 files in other folders)
